fix: 移除Spring AI依赖，改用RestTemplate直接调用OpenAI API